[gd_scene load_steps=3 format=3 uid="uid://cwrhifbjfqdbv"]

[ext_resource type="Script" path="res://settings.gd" id="1_7g0wv"]

[sub_resource type="ButtonGroup" id="ButtonGroup_kt27y"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7g0wv")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
theme_override_font_sizes/font_size = 24
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="Categories" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer/PanelContainer/Categories"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Categories"
horizontal_alignment = 1

[node name="CategoryButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer/PanelContainer/Categories"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 16
toggle_mode = true
button_group = SubResource("ButtonGroup_kt27y")

[node name="TabContainer" type="TabContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tabs_visible = false

[node name="Settings" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer/TabContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
theme_override_constants/separation = 10

[node name="SaveButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SAVE"

[node name="ResetButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "RESET"

[node name="DebounceTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Saving" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -257.0
offset_bottom = 65.0
grow_horizontal = 0

[node name="SavingLabel" type="Label" parent="Saving"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -123.0
offset_bottom = 49.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 16
text = "Saving..."
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="timeout" from="DebounceTimer" to="." method="_on_debounce_timer_timeout"]
